--- a/eureka-client-stuInfo/src/main/resources/templates/list.html
+++ b/eureka-client-stuInfo/src/main/resources/templates/list.html
@@ -109,54 +109,27 @@
 				</nav> -->
 
 				<main role="main" class="col-md-12 ml-sm-auto col-lg-12 pt-1 ">
-<div id="popLayer"></div>
-			<div id="popBox">
-			<div>
-			<button style="float: right" th:onclick="document.getElementById('popLayer').style.display='none';document.getElementById('popBox').style.display='none'"
-									class="btn btn-sm btn-danger btn-info">关闭</button>
-			<ul class="pagination" style="float: left">
-               <li class="page-item"><a class="page-link" id="11" href="javascript:void(0);">首页</a></li>
-               <li class="page-item"><a class="page-link" id="12" href="javascript:void(0);">上页</a></li>
-               <li class="page-item"><a class="page-link" id="13" href="javascript:void(0);">下页</a></li>
-               <li class="page-item"><a class="page-link" id="14" href="javascript:void(0);">尾页</a></li>
-			</ul>	
-			</div>	
-			<table class="table table-striped table-sm table-bordered">
-							<thead>
-								<tr>
-									<th>用户ID</th>
-									<th>最后登陆时间</th>
-									<th>最后登陆IP</th>
-									<th>用户活动</th>
-								</tr>
-							</thead>
-							<tbody id="tablebody">
-							</tbody>
-						</table>
-			</div>
+
 					<div class="table-responsive">
 						<table class="table table-striped table-sm table-bordered">
 							<thead>
 								<tr>
-									<th>用户ID</th>
-									<th>用户名</th>
-									<th>登陆邮箱</th>
-									<th>最后登陆时间</th>
-									<th>最后登陆IP</th>
-									<th>详情</th>
+									<th>学校名字</th>
+									<th>学校标识码</th>
+									<th>学校编号</th>
+									<th>邮编地址</th>
+									<th>是否激活</th>
+									<th>总人数</th>
+									<th>学生人数</th>
+									<th>学生参与人数</th>
+									<th>老师人数</th>
+									<th>老师参与人数</th>
+									<th>联系人</th>	
 								</tr>
 							</thead>
-							<tbody>
-							  <tr th:each="user:${PageInfo.list}">
-							      <td th:text="${user.userId}"></td>
-							      <td th:text="${user.userName}"></td>
-								  <td th:text="${user.email}"></td>
-								  <td th:text="${user.lastLoginTime}"></td>
-								  <td th:text="${user.lastLoginIP}"></td>
-								   <td>
-								<button th:onclick="getdata([[${user.userName}]],1)"
-									class="btn btn-sm btn-danger btn-info">详情</button>
-							    </td>
+							<tbody id="tablebody">
+							  <tr id="tr">
+							     
 							  </tr>
 							</tbody>
 						</table>
@@ -164,40 +137,6 @@
 					
 					<div class="row">
 					<div class="col-md-4 offset-md-8">
-					<nav aria-label="Page navigation example" >
-  <ul class="pagination">
-  <li class="page-item"><a class="page-link" href="/list/1">首页</a></li>
-    <li class="page-item">
-      <a class="page-link" href="#" aria-label="Previous" th:href="@{/list/}+${PageInfo.prePage}">
-        <span aria-hidden="true">&laquo;</span>
-        <span class="sr-only">Previous</span>
-      </a>
-    </li>
-    
-    <li class="page-item">
-    <a class="page-link" th:if="${PageInfo.pageNum-2>=1&& PageInfo.pageNum == PageInfo.pages}" th:href="@{/list/}+${PageInfo.pageNum-2}" th:text="${PageInfo.pageNum-2}"></a>
-    </li>
-    <li class="page-item">
-    <a class="page-link" th:if="${PageInfo.pageNum-1>=1}" th:href="@{/list/}+${PageInfo.pageNum-1}" th:text="${PageInfo.pageNum-1}"></a>
-    </li>
-    <li class="page-item">
-    <a class="page-link"  th:href="@{/list/}+${PageInfo.pageNum}" th:text="${PageInfo.pageNum}"></a>
-    </li>
-    <li class="page-item">
-    <a class="page-link" th:if="${PageInfo.pageNum+1<=PageInfo.pages}" th:href="@{/list/}+${PageInfo.pageNum+1}" th:text="${PageInfo.pageNum+1}"></a>
-    </li>
-    <li class="page-item">
-    <a class="page-link" th:if="${PageInfo.pageNum+2<=PageInfo.pages&&PageInfo.pageNum<2}" th:href="@{/list/}+${PageInfo.pageNum+2}" th:text="${PageInfo.pageNum+2}"></a>
-    </li>
-    <li class="page-item">
-      <a class="page-link" href="#" aria-label="Next" th:href="@{/list/}+${PageInfo.nextPage}">
-        <span aria-hidden="true">&raquo;</span>
-        <span class="sr-only">Next</span>
-      </a>
-    </li>
-     <li class="page-item"><a class="page-link" th:href="@{/list/}+${PageInfo.pages}">尾页</a></li>
-  </ul>
-</nav>
 					</div>
 					</div>
 				</main>
@@ -221,61 +160,52 @@
 		<!-- Graphs -->
 		<script type="text/javascript" src="/asserts/js/Chart.min.js"></script>
 		<script>
-			var ctx = document.getElementById("myChart");
-			var myChart = new Chart(ctx, {
-				type: 'line',
-				data: {
-					labels: ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"],
-					datasets: [{
-						data: [15339, 21345, 18483, 24003, 23489, 24092, 12034],
-						lineTension: 0,
-						backgroundColor: 'transparent',
-						borderColor: '#007bff',
-						borderWidth: 4,
-						pointBackgroundColor: '#007bff'
-					}]
-				},
-				options: {
-					scales: {
-						yAxes: [{
-							ticks: {
-								beginAtZero: false
-							}
-						}]
-					},
-					legend: {
-						display: false,
-					}
-				}
-			});
-			function getdata(data1,page){
-				if(page==0)
-					return;
-				 $.getJSON("/Uuid/"+page+"/?uuid="+data1,function(data,status){
-					 $("#tablebody").empty();
-					 for(var item of data.list) { // item代表数组里面的元素
-						 
+		var message='{"appID":"7166912116544627","operator":"123456789","data":{}}';
+		// var formdata = new FormData();
+		 //formdata.append("message",message);
+	     //formdata.append("file", $('#file')[0].files[0]);
+	    $.ajax({  
+	            type: "POST",   //提交的方法
+	            url:"http://47.112.126.70:8073/schoolinfo/getschoollist/1", //提交的地址  
+	            data:message,// 序列化表单值  
+	            //async: false, 
+	            contentType: "application/json", // 不设置内容类型
+	            withCredentials: false,
+	            //processData: false, // 不处理数据
+	            dataType: "json",
+	         //   error: function(request) {  //失败的话
+	          //       alert("Connection error");  
+	            //},  
+	            success: function(data) {  //成功
+	            	
+							
+	            
+	            	for(var item of data.data.list) { // item代表数组里面的元素
+	            		var ca='';
+		            	 if(item.listSchoolContactsVo!=null)
+							{for(var i of item.listSchoolContactsVo){
+								ca+="<td>"+i.name+"</td>"+
+						        "<td>"+i.phone+"</td>"+
+						        "<td>"+i.position+"</td>";
+		                     }}
 						 var $tr = $("<tr>"+
-							        "<td>"+item.uuid+"</td>"+
-							        "<td>"+item.lastTime+"</td>"+
-							        "<td>"+item.lastIP+"</td>"+
-							        "<td>"+item.action+"</td>"+
+							        "<td>"+item.schoolName+"</td>"+
+							        "<td>"+item.schoolId+"</td>"+
+							        "<td>"+item.schoolCode+"</td>"+
+							        "<td>"+item.postalCode+"</td>"+
+							        "<td>"+item.active+"</td>"+
+							        "<td>"+item.headcount+"</td>"+
+							        "<td>"+item.studentcount+"</td>"+
+							        "<td>"+item.studentactcount+"</td>"+
+							        "<td>"+item.teachercount+"</td>"+
+							        "<td>"+item.teacheractcount+"</td>"+
+							        ca
 							        +"</tr>");
 						 $("#tablebody").append($tr);
-						};
-					
-						$("#11").attr("onclick","getdata(\'"+data1+"\',1)"); 
-						$("#12").attr("onclick","getdata(\'"+data1+"\',"+data.prePage+")"); 
-						$("#13").attr("onclick","getdata(\'"+data1+"\',"+data.nextPage+")"); 
-						$("#14").attr("onclick","getdata(\'"+data1+"\',"+data.pages+")"); 
-					  });
-				
-				 var popBox = document.getElementById("popBox");
-			     var popLayer = document.getElementById("popLayer");
-			     if(popBox.style.display!="block")
-			     {popBox.style.display = "block";
-			     popLayer.style.display = "block";		}     
-		    };
+	            	}	
+	            }  
+	         });
+
 		</script>
 
 	</body>
